--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "@angular/router": "^18.2.0",
     "@fortawesome/fontawesome-free": "^6.0.0",
     "chart.js": "^3.1.1",
-    "mdb-angular-ui-kit": "^7.0.0",
+    "primeicons": "^7.0.0",
+    "primeng": "^17.18.11",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.10"
