--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,14 +25,11 @@
     ],
     "baseUrl": "./",
     "paths": {
-      "@core/*": [
-        "./src/environments/*"
-      ],
       "@shared/*": [
         "./src/app/shared/*"
       ],
-      "@app/*": [
-        "./src/app/*"
+      "@core/*": [
+        "./src/app/core*"
       ],
       "@env/*": [
         "./src/environments/*"
@@ -42,6 +39,9 @@
       ],
       "@features/*": [
         "./src/features/*"
+      ],
+      "@app/*": [
+        "./src/app/*"
       ],
     },
   },
