--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/router": "^18.2.0",
     "@fortawesome/fontawesome-free": "^6.0.0",
     "chart.js": "^3.1.1",
+    "ng2-charts": "^6.0.1",
     "primeicons": "^7.0.0",
     "primeng": "^17.18.11",
     "rxjs": "~7.8.0",
