--- a/.editorconfig
+++ b/.editorconfig
@@ -9,9 +9,12 @@ insert_final_newline = true
 trim_trailing_whitespace = true
 
 [*.ts]
+indent_style = space
+indent_size = 2
 quote_type = single
-ij_typescript_use_double_quotes = false
 
 [*.md]
+indent_style = space
+indent_size = 2
 max_line_length = off
 trim_trailing_whitespace = false
