--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,31 +19,16 @@
     "importHelpers": true,
     "target": "ES2022",
     "module": "ES2022",
-    "lib": [
-      "ES2022",
-      "dom"
-    ],
+    "lib": ["ES2022", "dom"],
     "baseUrl": "./",
     "paths": {
-      "@shared/*": [
-        "./src/app/shared/*"
-      ],
-      "@core/*": [
-        "./src/app/core/*"
-      ],
-      "@env/*": [
-        "./src/environments/*"
-      ],
-      "@assets/*": [
-        "./src/assets/*"
-      ],
-      "@features/*": [
-        "./src/features/*"
-      ],
-      "@app/*": [
-        "./src/app/*"
-      ],
-    },
+      "@shared/*": ["./src/app/shared/*"],
+      "@core/*": ["./src/app/core/*"],
+      "@env/*": ["./src/environments/*"],
+      "@assets/*": ["./src/assets/*"],
+      "@features/*": ["./src/features/*"],
+      "@app/*": ["./src/app/*"]
+    }
   },
   "angularCompilerOptions": {
     "enableI18nLegacyMessageIdFormat": false,
