--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "primeng": "^17.18.11",
     "rxjs": "~7.8.0",
     "tslib": "^2.8.1",
+    "unifit": "file:",
     "uuid": "^11.0.2",
     "zone.js": "~0.14.10"
   },
