--- a/package.json
+++ b/package.json
@@ -23,10 +23,12 @@
     "@angular/router": "^18.2.0",
     "@fortawesome/fontawesome-free": "^6.0.0",
     "chart.js": "^3.9.1",
+    "clsx": "^2.1.1",
     "ng2-charts": "^6.0.1",
     "primeicons": "^7.0.0",
     "primeng": "^17.18.11",
     "rxjs": "~7.8.0",
+    "tailwind-merge": "^2.5.4",
     "tslib": "^2.8.1",
     "unifit": "file:",
     "uuid": "^11.0.2",
