--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@fortawesome/fontawesome-free": "^6.0.0",
     "chart.js": "^3.9.1",
     "clsx": "^2.1.1",
+    "jwt-decode": "^4.0.0",
     "ng2-charts": "^6.0.1",
     "primeicons": "^7.0.0",
     "primeng": "^17.18.11",
