--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,15 +19,36 @@
     "importHelpers": true,
     "target": "ES2022",
     "module": "ES2022",
-    "lib": ["ES2022", "dom"],
+    "lib": [
+      "ES2022",
+      "dom"
+    ],
     "baseUrl": "./",
     "paths": {
-      "@shared/*": ["./src/app/shared/*"],
-      "@core/*": ["./src/app/core/*"],
-      "@env/*": ["./src/environments/*"],
-      "@assets/*": ["./src/assets/*"],
-      "@features/*": ["./src/features/*"],
-      "@app/*": ["./src/app/*"]
+      "@auth/*": [
+        "./src/app/features/auth/*"
+      ],
+      "@dashboard/*": [
+        "./src/app/features/dashboard/*"
+      ],
+      "@workouts/*": [
+        "./src/app/features/workouts/*"
+      ],
+      "@profile/*": [
+        "./src/app/features/profile/*"
+      ],
+      "@shared/*": [
+        "./src/app/shared/*"
+      ],
+      "@core/*": [
+        "./src/app/core/*"
+      ],
+      "@env/*": [
+        "./src/environments/*"
+      ],
+      "@assets/*": [
+        "./src/assets/*"
+      ],
     }
   },
   "angularCompilerOptions": {
