--- a/package.json
+++ b/package.json
@@ -3,13 +3,14 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
-    "build": "ng build",
-    "watch": "ng build --watch --configuration development",
+    "start": "npm run build:env && ng serve",
+    "build": "npm run build:env && ng build",
+    "watch": "npm run build:env && ng build --watch --configuration development",
     "test": "ng test",
     "prettier": "prettier --check .",
     "prettier:fix": "prettier --write .",
-    "prepare": "husky"
+    "prepare": "husky",
+    "build:env": "node set-env.js"
   },
   "private": true,
   "lint-staged": {
@@ -35,6 +36,7 @@
     "@fortawesome/fontawesome-free": "^6.0.0",
     "chart.js": "^3.9.1",
     "clsx": "^2.1.1",
+    "dotenv": "^16.4.7",
     "jwt-decode": "^4.0.0",
     "ng2-charts": "^6.0.1",
     "ngx-toastr": "^19.0.0",
