--- a/package.json
+++ b/package.json
@@ -3,14 +3,12 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "npm run build:env && ng serve",
-    "build": "npm run build:env && ng build",
-    "watch": "npm run build:env && ng build --watch --configuration development",
+    "start": "ng serve",
+    "build": "ng build",
+    "watch": "ng build --watch --configuration development",
     "test": "ng test",
     "prettier": "prettier --check .",
-    "prettier:fix": "prettier --write .",
-    "prepare": "husky",
-    "build:env": "node set-env.js"
+    "prettier:fix": "prettier --write ."
   },
   "private": true,
   "lint-staged": {
@@ -36,15 +34,14 @@
     "@fortawesome/fontawesome-free": "^6.0.0",
     "chart.js": "^3.9.1",
     "clsx": "^2.1.1",
-    "dotenv": "^16.4.7",
     "jwt-decode": "^4.0.0",
     "ng2-charts": "^6.0.1",
-    "ngx-toastr": "^19.0.0",
     "primeicons": "^7.0.0",
     "primeng": "^17.18.11",
     "rxjs": "~7.8.0",
     "tailwind-merge": "^2.5.4",
     "tslib": "^2.8.1",
+    "unifit": "file:",
     "uuid": "^11.0.2",
     "zone.js": "~0.14.10"
   },
@@ -52,25 +49,17 @@
     "@angular-devkit/build-angular": "^18.2.7",
     "@angular/cli": "^18.2.7",
     "@angular/compiler-cli": "^18.2.0",
-    "@commitlint/cli": "^19.6.0",
-    "@commitlint/config-conventional": "^19.6.0",
-    "@eslint/js": "^9.16.0",
     "@types/jasmine": "~5.1.0",
     "autoprefixer": "^10.4.20",
-    "eslint": "^9.16.0",
-    "globals": "^15.13.0",
-    "husky": "^9.1.7",
     "jasmine-core": "~5.2.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
-    "lint-staged": "^15.2.10",
     "postcss": "^8.4.47",
     "prettier": "3.3.3",
     "tailwindcss": "^3.4.14",
-    "typescript": "~5.5.2",
-    "typescript-eslint": "^8.17.0"
+    "typescript": "~5.5.2"
   }
 }
