--- a/package.json
+++ b/package.json
@@ -36,12 +36,12 @@
     "clsx": "^2.1.1",
     "jwt-decode": "^4.0.0",
     "ng2-charts": "^6.0.1",
+    "ngx-toastr": "^19.0.0",
     "primeicons": "^7.0.0",
     "primeng": "^17.18.11",
     "rxjs": "~7.8.0",
     "tailwind-merge": "^2.5.4",
     "tslib": "^2.8.1",
-    "unifit": "file:",
     "uuid": "^11.0.2",
     "zone.js": "~0.14.10"
   },
@@ -49,8 +49,14 @@
     "@angular-devkit/build-angular": "^18.2.7",
     "@angular/cli": "^18.2.7",
     "@angular/compiler-cli": "^18.2.0",
+    "@commitlint/cli": "^19.8.0",
+    "@commitlint/config-conventional": "^19.8.0",
     "@types/jasmine": "~5.1.0",
     "autoprefixer": "^10.4.20",
+    "eslint": "^9.23.0",
+    "eslint-staged": "^1.0.1",
+    "globals": "^16.0.0",
+    "husky": "^9.1.7",
     "jasmine-core": "~5.2.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
@@ -60,6 +66,7 @@
     "postcss": "^8.4.47",
     "prettier": "3.3.3",
     "tailwindcss": "^3.4.14",
-    "typescript": "~5.5.2"
+    "typescript": "~5.5.2",
+    "typescript-eslint": "^8.29.0"
   }
 }
